# slae

./: README.md
Assignment_1/: _shell_bind_tcp.nasm  build_shell.sh  c_shell_bind_tcp  shell_bind_tcp  shell_bind_tcp.c  shell_bind_tcp.nasm  shellcode  shellcode.c
Assignment_2/: build_shell.sh  reverse_bind_shell_tcp.c  reverse_tcp_shellcode  reverse_tcp_shellcode.nasm  shellcode  shellcode.c  shellcode_template.c
Assignment_3/: .gitignore  build_shellcode.sh  egg_hunter  egg_hunter.nasm  execve-stack  execve-stack.nasm  shellcode  shellcode.c  shellcode_template.c
Assignment_4/: .gdb_history  compile.sh  encoder.py  execve-stack-decoder-v2  execve-stack-decoder-v2.nasm  execve-stack-decoder.nasm  execve-stack.nasm  shellcode.c
Assignment_5/: .gdb_history  notes.txt  shellcode.tmp  shellcode1  shellcode1.c  shellcode2  shellcode2.c  shellcode3.c  shellcode3.dot
Assignment_6/: .gdb_history  .shellcode3_original.nasm.swp  shellcode-831  shellcode-831.c  shellcode1_original.nasm  shellcode1_polymorphic.c  shellcode1_polymorphic.nasm  shellcode1_polymorphic_v2.c  shellcode1_polymorphic_v2.nasm  shellcode2_original.nasm  shellcode2_polymorphic  shellcode2_polymorphic.c  shellcode2_polymorphic.nasm  shellcode3_original  shellcode3_original.nasm  shellcode3_polymorphic.c  shellcode3_polymorphic.nasm
Assignment_7/: execve-stack.nasm
Assignment_7/simon-speck-c/: CMakeLists.txt
Assignment_7/simon-speck-c/sample/: SSCrypter.cpp  SSExecuteShellcode.cpp
Assignment_7/simon-speck-c/scripts/speck/: build_linux.sh
